--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Setting up terraform credentials
-      run: touch  ~/.config/openstack/clouds.yaml $$ echo echo "${{ secrets.OPENSTACK_CREDENTIALS }}" >> ~/.config/openstack/clouds.yaml && export OS_CLOUD=openstack
+      run: mkdir -p  ~/.config/openstack/ && echo "${{ secrets.OPENSTACK_CREDENTIALS }}" >> ~/.config/openstack/clouds.yaml && export OS_CLOUD=openstack
     
     - name: Terraform Init
       id: init
