--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -15,9 +15,6 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Setting up terraform credentials
-      run: export OS_CLOUD=openstack
-
     - name: Terraform Init
       id: init
       run: terraform init
@@ -27,5 +24,9 @@ jobs:
       #if: github.event_name == 'pull_request'
       run: terraform plan -no-color -input=false
       continue-on-error: true
-      env:
-        export OS_CLOUD: 'openstack'
+      
+    - name: Terraform destroy
+      run: terraform destroy -auto-approve -input=false
+  
+    - name: Terraform Apply
+      run: terraform apply -auto-approve -input=false
