--- a/docker/mattermost-bots/src/main/resources/application.properties
+++ b/docker/mattermost-bots/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-app.openweatherApiKey = 380fbaca7e742834ae2d92eb61895e99
+app.openweatherApiKey = SECRETAPI
 app.openweatherIconUrl = http://openweathermap.org/img/wn/
 app.showWeatherDays = 7
