--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -17,6 +17,7 @@ jobs:
       
     - name: Getting Statefile from static directory
       run: cp /actions-runner/terraform.tfstate* .
+      if: always()
       
     - name: Setting API Secret
       run: sed -in s/SECRETAPI/${{ secrets.API }}/g docker/mattermost-bots/src/main/resources/application.properties
